<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/menuFriends"
            android:icon="@drawable/friends"
            android:title="@string/amici" />

        <item android:title="@string/liste">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menuFavourites"
                        android:icon="@drawable/favourites"
                        android:title="@string/preferiti" />

                    <item
                        android:id="@+id/menuToWatch"
                        android:icon="@drawable/towatch"
                        android:title="@string/daVedere" />
                </group>
            </menu>
        </item>

        <item android:title="@string/altro">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menuSettings"
                        android:icon="@drawable/settings"
                        android:title="@string/impostazioni" />

                    <item
                        android:id="@+id/menuInfo"
                        android:icon="@drawable/info"
                        android:title="@string/informazioni" />
                </group>
            </menu>
        </item>

        <item android:title="@string/disconnettiti">
            <menu>
                <group android:checkableBehavior="single">
                     <item
                         android:id="@+id/menuLogout"
                         android:icon="@drawable/logout"
                         android:title="@string/logout" />
                </group>
            </menu>
        </item>
    </group>

</menu>