<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/share"
            android:id="@+id/shareItem"
            android:icon="@drawable/ic_share"
            app:showAsAction="always">
        </item>

        <item
            android:title="@string/search"
            android:id="@+id/searchItem"
            android:icon="@drawable/ic_search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView">
        </item>

        <item
            android:title="@string/notification"
            android:id="@+id/notificationItem"
            android:icon="@drawable/ic_notifications"
            app:showAsAction="always" >
        </item>

    </group>

</menu>