<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/informationDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/background_toolbar_header" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo_federico_secondo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:text="@string/developersLabel"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:text="@string/developerInfo1"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/developerInfo2"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="start"
            android:text="@string/contactsLabel"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/developerContact1"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/developerContact2"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:typeface="serif"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/informationNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_home_navigation_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>