<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/movieSearchResultCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/lightGray"
        android:layout_margin="10dp"
        app:cardCornerRadius="13dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/cover_movie"
                android:layout_width="100dp"
                android:layout_height="132dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/not_found"
                app:riv_corner_radius="10dp"
                android:contentDescription="@string/description_cover_film" />

            <TextView
                android:id="@+id/title_movie"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/cover_movie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_movie"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/description_movie_result_search"
                android:ellipsize="end"
                android:maxLines="5"
                app:layout_constraintStart_toStartOf="@id/title_movie"
                app:layout_constraintTop_toBottomOf="@id/title_movie" />

            <ImageView
                android:id="@+id/threeDotsMovieContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/three_dots_description"
                style="?android:actionButtonStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_three_dots" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>